fix incorrect left margin on main section causing horizontal scroll

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -199,7 +199,7 @@ main {
   }
 
   main {
-    padding: 80px;
+    padding-top: 80px;
   }
 
   .nav-bottom-right-links a:nth-child(2) {
